--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,98 @@
+# Jekyll Configuration for GitHub Pages
 title: OpenCode Agents
-description: Specialized agents for intelligent development workflows
-remote_theme: pages-themes/slate@v0.2.0
+description: Specialized agents for intelligent, plan-first development workflows
+url: https://shahboura.github.io
+baseurl: /agents-opencode
+repository: shahboura/agents-opencode
+
+# Theme Configuration
+# Using both theme and remote_theme ensures compatibility with local builds and GitHub Pages
+theme: just-the-docs
+remote_theme: just-the-docs/just-the-docs
+
+# Plugins
 plugins:
-- jekyll-remote-theme
+  - jekyll-feed
+  - jekyll-seo-tag
+
+# Color scheme
+color_scheme: light
+
+# Logo and branding
+logo: false
+
+# Search Configuration
+search_enabled: true
+search:
+  heading_level: 2
+  previews: 3
+  preview_words_before: 5
+  preview_words_after: 10
+  tokenizer_separator: /[\s/]+/
+  rel_url: true
+  button: false
+
+# Navigation
+nav_sort: order
+nav_external_links:
+  - title: GitHub Repository
+    url: https://github.com/shahboura/agents-opencode
+
+# Footer
+footer_content: "Copyright &copy; 2025 Shehab Elhadidy. Licensed under the MIT License."
+
+# Aux links
+aux_links:
+  "View on GitHub":
+    - "https://github.com/shahboura/agents-opencode"
+
+aux_links_new_tab: true
+
+# Back to top link
+back_to_top: true
+back_to_top_text: "Back to top"
+
+# Heading anchors
+heading_anchors: true
+
+# Code highlighting
+kramdown:
+  syntax_highlighter_opts:
+    block:
+      line_numbers: false
+
+# SEO Metadata
+lang: en_US
+author:
+  name: "Shehab ElHadidy"
+  twitter: "shahboura"
+
+twitter:
+  username: shahboura
+  card: summary_large_image
+
+social:
+  name: OpenCode Agents
+  links:
+    - https://github.com/shahboura/agents-opencode
+
+# Default SEO tags
+defaults:
+  - scope:
+      path: ""
+    values:
+      image: /assets/images/og-image.png
+
+# Collections for agent pages
+collections:
+  agents:
+    output: true
+
+# Exclude from processing
+exclude:
+  - node_modules/
+  - vendor/
+  - .sass-cache/
+  - .jekyll-cache/
+  - Gemfile
+  - Gemfile.lock
