Update codebase agent with additional language support (Flutter, Go, Node.js, React) and documentation improvements

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,8 +6,8 @@ baseurl: /agents-opencode
 repository: shahboura/agents-opencode
 
 # Theme Configuration
-# Using theme for local builds; remote_theme for GitHub Pages
-remote_theme: just-the-docs/
+# Using remote_theme for GitHub Pages
+remote_theme: just-the-docs/just-the-docs
 
 # Plugins
 plugins:
