Add Java Spring Boot, Rust, Ruby on Rails instructions and profiles
- New instruction files for Java, Rust, Ruby on Rails
- Updated @codebase agent with detection and standards for new languages
- Enhanced documentation with TOC, keyboard shortcuts, troubleshooting
- Added version badges, optimized descriptions, demo placeholders
- Set up automated release workflow with semantic versioning

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "agents-opencode",
   "version": "1.0.0",
-  "description": "OpenCode.ai agent orchestration system with language-specific development agents",
+  "description": "Intelligent AI agents for streamlined development workflows. Multi-language support with auto-applied coding standards, plan-first execution, and specialized agents for code generation, review, documentation, and content creation.",
   "private": true,
   "scripts": {
     "lint:md": "markdownlint \"**/*.md\" --ignore node_modules --ignore .github",
