--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "install:global": "node install.js --global",
     "install:project": "node install.js --project",
-    "lint:md": "markdownlint \"**/*.md\" --ignore node_modules --ignore .github",
-    "lint:md:fix": "markdownlint \"**/*.md\" --ignore node_modules --ignore .github --fix",
+    "lint:md": "remark \"**/*.md\" --ignore-path .gitignore --use remark-preset-lint-markdown-style-guide",
+    "lint:md:fix": "remark \"**/*.md\" --ignore-path .gitignore --use remark-preset-lint-markdown-style-guide --output",
     "validate:agents": "pwsh -File scripts/validate-agents.ps1",
     "validate:docs": "pwsh -File scripts/validate-docs.ps1",
     "validate:context": "pwsh -File scripts/check-context-size.ps1",
@@ -15,7 +15,8 @@
     "test": "npm run validate:all"
   },
   "devDependencies": {
-    "markdownlint-cli": "^0.38.0"
+    "remark-cli": "^12.0.0",
+    "remark-preset-lint-markdown-style-guide": "^4.0.0"
   },
   "keywords": [
     "opencode",
