--- a/package.json
+++ b/package.json
@@ -4,20 +4,15 @@
   "description": "OpenCode Agents: Intelligent AI assistants for software development. Features 8 specialized agents, 15+ language standards, automated code review, documentation generation, and cross-platform installation. Supports .NET, Python, TypeScript, Flutter, Go, Java, Node.js, React, Ruby, and Rust with plan-first execution and context-aware assistance.",
   "private": true,
   "scripts": {
-    "install:global": "node install.js --global",
-    "install:project": "node install.js --project",
-    "lint:md": "remark \"**/*.md\" --ignore-path .gitignore --use remark-preset-lint-markdown-style-guide",
-    "lint:md:fix": "remark \"**/*.md\" --ignore-path .gitignore --use remark-preset-lint-markdown-style-guide --output",
+    "lint:md": "markdownlint \"**/*.md\" --ignore node_modules --ignore .github",
+    "lint:md:fix": "markdownlint \"**/*.md\" --ignore node_modules --ignore .github --fix",
     "validate:agents": "pwsh -File scripts/validate-agents.ps1",
     "validate:docs": "pwsh -File scripts/validate-docs.ps1",
     "validate:context": "pwsh -File scripts/check-context-size.ps1",
     "validate:all": "npm run validate:agents && npm run validate:docs && npm run validate:context && npm run lint:md",
     "test": "npm run validate:all"
   },
-  "devDependencies": {
-    "remark-cli": "^12.0.0",
-    "remark-preset-lint-markdown-style-guide": "^4.0.0"
-  },
+
   "keywords": [
     "opencode",
     "ai-agents",
