--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -52,49 +52,24 @@ jobs:
         run: |
           ./scripts/validate-docs.ps1
 
-  lint-markdown:
-    name: Lint Markdown Files
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-      
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Lint markdown
-        run: npm run lint:md
-      
-      - name: Check for markdown lint issues
-        if: failure()
-        run: |
-          echo "::warning::Markdown linting failed. Run 'npm run lint:md:fix' to auto-fix issues."
+
 
   validation-summary:
     name: Validation Summary
     runs-on: ubuntu-latest
-    needs: [validate-agents, validate-docs, lint-markdown]
+    needs: [validate-agents, validate-docs]
     if: always()
-    
+
     steps:
       - name: Check validation results
         run: |
           echo "Agent Validation: ${{ needs.validate-agents.result }}"
           echo "Documentation Validation: ${{ needs.validate-docs.result }}"
-          echo "Markdown Linting: ${{ needs.lint-markdown.result }}"
-          
+
           if [ "${{ needs.validate-agents.result }}" != "success" ] || \
-             [ "${{ needs.validate-docs.result }}" != "success" ] || \
-             [ "${{ needs.lint-markdown.result }}" != "success" ]; then
+             [ "${{ needs.validate-docs.result }}" != "success" ]; then
             echo "::error::One or more validation checks failed"
             exit 1
           fi
-          
+
           echo "✅ All validation checks passed!"
