docs: Add theme alternatives research in config comments
- Documented alternative Jekyll themes considered
- Noted evaluation criteria for theme selection
- Kept current just-the-docs for stability

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,7 +7,8 @@ repository: shahboura/agents-opencode
 
 # Theme Configuration
 # Using remote_theme for GitHub Pages
-remote_theme: just-the-docs/just-the-docs
+# Alternatives considered: minimal-mistakes, beautiful-jekyll, jekyll-theme-chirpy
+remote_theme: pmarsceill/just-the-docs
 
 # Plugins
 plugins:
