docs: Add research notes for lightweight theme alternatives
- Documented lightweight Jekyll themes with search and dark mode
- Focused on themes with minimal footprint and good performance
- Kept current just-the-docs for stability

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,6 +7,7 @@ repository: shahboura/agents-opencode
 
 # Theme Configuration
 # Using remote_theme for GitHub Pages
+# Lightweight alternatives: minimal-mistakes, beautiful-jekyll, jekyll-theme-chirpy
 remote_theme: pmarsceill/just-the-docs
 
 # Plugins
