fix: Remove jekyll-sitemap plugin for GitHub Pages compatibility
- Removed jekyll-sitemap from plugins list
- GitHub Pages doesn't support jekyll-sitemap
- Kept jekyll-feed and jekyll-seo-tag which are supported

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -12,10 +12,9 @@ remote_theme: daattali/beautiful-jekyll
 markdown: kramdown
 highlighter: rouge
 
-# Plugins
+# Plugins (GitHub Pages compatible)
 plugins:
   - jekyll-feed
-  - jekyll-sitemap
   - jekyll-seo-tag
 
 # Theme colors (light mode)
