fix: Comment out avatar field for Beautiful Jekyll compatibility
- Commented out avatar field since no avatar image exists
- This prevents potential build issues with missing assets

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -52,6 +52,7 @@ navbar-links:
 author: Shehab Elhadidy
 github: shahboura
 twitter: shahboura
+# avatar: /assets/images/avatar.png  # Commented out - no avatar image
 
 # Site settings are defined above
 
