fix: Comment out collections for Beautiful Jekyll compatibility
- Commented out collections configuration
- Beautiful Jekyll may not support collections in the same way
- This prevents potential build issues

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -56,10 +56,10 @@ twitter: shahboura
 
 # Site settings are defined above
 
-# Collections
-collections:
-  agents:
-    output: true
+# Collections (commented out for compatibility)
+# collections:
+#   agents:
+#     output: true
 
 # Exclude from processing
 exclude:
