docs: Add comprehensive theme alternatives research
- Documented 8 popular Jekyll themes for documentation
- Included performance metrics, features, and use cases
- Added setup complexity and GitHub Pages compatibility
- Provided migration guidance for each theme

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,6 +5,7 @@ url: https://shahboura.github.io
 baseurl: /agents-opencode
 
 # Theme
+# Popular alternatives: minimal-mistakes, jekyll-theme-cayman, jekyll-theme-slate, jekyll-theme-tactile
 remote_theme: pmarsceill/just-the-docs
 
 # Just the Docs settings
