fix: Resolve UI issues with just-the-docs configuration
- Removed color_scheme setting that might be causing display issues
- Updated CSS to use standard colors instead of CSS variables
- Fixed table styling to use standard table elements
- Corrected navigation CSS selectors
- Simplified styling to work reliably with just-the-docs

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,8 +7,7 @@ baseurl: /agents-opencode
 # Theme
 remote_theme: pmarsceill/just-the-docs
 
-# Enable dark mode
-color_scheme: "dark"
+# Theme uses default color scheme
 
 # Navigation
 nav_external_links:
